# j26-signupinfo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-image.yml  build-image.yml.disabled  ci.yml  update-dependencies.yml
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js
client/src/: App.css  App.jsx  TableTest.tsx  index.css  main.jsx
client/src/components/: DrawerToggleButton.jsx  ExpandCollapseButton.jsx  ExpandableAnswers.jsx  HeroMetric.jsx  MultiselectMenu.tsx  PeopleView.jsx  ProjectSwitcher.jsx  QuestionAnswerValues.jsx  QuestionRow.jsx  QuestionStats.jsx  ScoutGroupListItem.jsx  ScoutGroupSelector.jsx  ScoutGroupTable.jsx  SearchField.jsx  SmartTable.tsx  StatRow.jsx  StatisticBox.jsx  StatisticCard.jsx  StatisticChipSelector.jsx  StatisticPaper.jsx  StatisticSelector.jsx  StatisticsDashboard.jsx  Table.jsx  VillageListItem.jsx
client/src/constants/: layout.js  selectionTypes.js
client/src/context/: GroupSelectionContext.jsx  ProjectConfigContext.jsx  ScoutGroupSelectorContext.jsx
client/src/hooks/: useApiData.js  useGroupSummary.js  useIndividualResponse.js  useIndividualsByGroup.js  useProjectQueries.js  useQuestionGroupResponse.js  useScoutGroupData.js  useScoutGroupSelector.js  useSearchMembers.js  useUrlHashState.js
client/src/services/: api.js
client/testdata/: testdata.json
pyapp/: requirements.txt  start.py
pyapp/app/: api.py  authenctication.py  config.py  main.py  scoutnet.py  scoutnet_forms.py  stats.py
tests/: conftest.py  test_smoke.py
(+8 files in other folders)
