[project]
name = "j26-signupinfo"
version = "0.4.0"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]",
    "fastapi[standard]",
    "httpx[http2]",
    "joserfc",
    "itsdangerous",
    "pydantic",
    "pydantic-settings",
    "jinja2",
    "async-lru",
    "prometheus-fastapi-instrumentator",
]
